# ironsnake

./: Cargo.toml  README.md
.github/workflows/: CI.yml
crates/ironsnake/: Cargo.toml
crates/ironsnake-simple/: Cargo.toml
crates/ironsnake-simple/src/: aggregate.rs  lib.rs  person.rs
crates/ironsnake-snek/: Cargo.toml
crates/ironsnake-snek/src/: main.rs
crates/ironsnake/src/: lib.rs
python/ironsnake/: pyproject.toml  setup.cfg
python/ironsnake-package1/: Cargo.toml  pyproject.toml
python/ironsnake-package1/.github/workflows/: CI.yml
python/ironsnake-package1/ironsnake/package1/: __init__.py
python/ironsnake-package1/src/: lib.rs
python/ironsnake-package2/: Cargo.toml  pyproject.toml
python/ironsnake-package2/ironsnake/package2/: __init__.py
python/ironsnake-package2/src/: lib.rs
python/ironsnake-simple/: Cargo.toml  pyproject.toml
python/ironsnake-simple/tests/: test_pyo3_funcs.py
python/ironsnake-snek/python/ironsnake/snek/: snek_game.py
