[package]
name = "ironsnake-snek"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "../../README.md"
repository = { workspace = true }
description = "A project exploring building a Rust/Python package."

[dependencies]
piston_window = "0.120.0"
rand = "0.8.0"
gfx_device_gl = "0.16"
